manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dumbkv-service
spec:
  selector:
    app: dumbkv
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
